objects/hic_signeasy__SME_Configuration_Setting__mdt.object
<CustomObject>
    <description>Used to save the Sign made easy setting</description>
    <fields>
        <fullName>hic_signeasy__Allow_Log_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Log Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Basic_Tag_Configuration__c</fullName>
        <label>Basic Tag Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Disable_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Hide_Audit_Trail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Hide Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__NotifyUserForMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyUserForMail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Reassign_Signer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reassign Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Redirect_Url__c</fullName>
        <label>Redirect Url</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Selected_Org_Wide_Email__c</fullName>
        <label>Selected Org Wide Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Setup_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Uid__c</fullName>
        <label>Uid</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Write_Back_Configuration__c</fullName>
        <label>Write Back Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>SME Configuration Setting</label>
    <pluralLabel>SME Configuration Settings</pluralLabel>
</CustomObject>